syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "wx-base/api/wx_base/v1;v1";

// -------------- 公众号 --------------
service OfficialAccount {

  // 微信回调
  rpc WxCallback (WxCallbackRequest) returns (WxCallbackReply) {
    option (google.api.http) = {
      get: "/wx/new"
    };
  }



  // ------------ internal ----------
  // 添加公众号
  rpc AddOfficialAccount (AddOfficialAccountRequest) returns (AddOfficialAccountReply) {
    option (google.api.http) = {
      post: "/v1/official_account"
      body: "*"
    };
  }
  // 修改公众号
  rpc UpdateOfficialAccount (UpdateOfficialAccountRequest) returns (UpdateOfficialAccountReply) {
    option (google.api.http) = {
      put: "/v1/official_account"
      body: "*"
    };
  }
  // 删除公众号
  rpc DeleteOfficialAccount (DeleteOfficialAccountRequest) returns (DeleteOfficialAccountReply) {
    option (google.api.http) = {
      delete: "/v1/official_account"
    };
  }
  // 获取公众号列表
  rpc GetOfficialAccountList (GetOfficialAccountListRequest) returns (GetOfficialAccountListReply) {
    option (google.api.http) = {
      get: "/v1/official_account"
    };
  }

}

message  WxCallbackRequest {
  string signature = 1;
  string timestamp = 2;
  string nonce = 3;
  string echostr = 4;
}

message WxCallbackReply {
  string echostr = 1;
}

// -------------- 小程序 --------------
service MiniProgram {

  // -------------- wx --------------
  // 通过code获取openid
  rpc GetOpenidByCode (GetOpenidByCodeRequest) returns (GetOpenidByCodeReply) {
    option (google.api.http) = {
      get: "/v1/wx/openid"
    };
  }

  // ------------ internal ----------
  // 添加小程序
  rpc AddMiniProgram (AddMiniProgramRequest) returns (AddMiniProgramReply) {
    option (google.api.http) = {
      post: "/v1/mini_program"
      body: "*"
    };
  }
}

// GetOpenidByCode 方法
// 通过code获取openid
// customer和appId：二选一
message GetOpenidByCodeRequest {
  string customer = 1; // 小程序名称
  string appId = 2; // 小程序appId
  string code = 3; // 微信侧获取的用户code
}

message GetOpenidByCodeReply {
  message Data {
    string openid = 1;
    string mobile = 2; // 如果绑定过，mobile才会有值
  }
  int32 ret = 1;
  string msg = 2;
  Data data = 3;
}


// AddOfficialAccount 方法
// 添加公众号
message AddOfficialAccountRequest {
  string name = 1; // 公众号名称
  string appId = 2; // 公众号appId
  string appSecret = 3; // 公众号appSecret
  string token = 4; // 公众号token
  string encodingAesKey = 5; // 公众号encodingAesKey
  string tokenUrl = 6; // 公众号tokenUrl
  string appIdAlias = 7; // 公众号appId别名
}

message AddOfficialAccountReply {
  string name = 1; // 公众号名称
  int64  Id = 2; // id
}

// AddMiniProgram 方法
// 添加小程序
message AddMiniProgramRequest {}

message AddMiniProgramReply {}

// UpdateOfficialAccount 方法
// 修改公众号
message UpdateOfficialAccountRequest {}

message UpdateOfficialAccountReply {}

// DeleteOfficialAccount 方法
// 删除公众号
message DeleteOfficialAccountRequest {}

message DeleteOfficialAccountReply {}

// GetOfficialAccountList 方法
// 获取公众号列表
message GetOfficialAccountListRequest {}

message GetOfficialAccountListReply {}